--- a/Project/home/templates/home/main.html
+++ b/Project/home/templates/home/main.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'home/styles.css' %}">
 </head>
 <body>
-    <h1>Hello, this is my view!</h1>
+    <h1>Hello there!</h1>
     <script src="{% static 'home/script.js' %}"></script>
 </body>
 </html>
