--- a/Project/home/templates/home/main.html
+++ b/Project/home/templates/home/main.html
@@ -3,43 +3,50 @@
 <html>
 <head>
     <title>My View</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'home/styles.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'home/style.css' %}">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Profile</a></li>
-                <li><a href="#">Friends</a></li>
-                <li><a href="#">Messages</a></li>
-            </ul>
-        </nav>
-    </header>
-    
+    <banner>
+        <div class="logo">
+            <img src="{% static 'home/img/monkee.jpg' %}" alt="logo" style="width: 113px; height: 40px;">
+        </div>
+        <div class="search">
+
+        </div>
+        <div class="main_page">
+
+        </div>
+        <div class="friends_list">
+
+        </div>
+        <div class="notification">
+
+        </div>
+        <div class="account">
+
+        </div>
+    </banner>
+    <!--
     <main>
         <section class="post">
             <div class="post-header">
-                <img src="{% static 'home/profile_picture.jpg' %}" alt="Profile Picture">
                 <h2>John Doe</h2>
             </div>
             <div class="post-content">
-                <p>This is my first post on the knock-off Facebook site!</p>
+                <img src="{% static 'home/img/man.jpg' %}" alt="Beach Photo">
             </div>
             <div class="post-footer">
-                <button>Like</button>
-                <button>Commen</button>
-                <button>Share</button>
+                <button class="post-button">Like</button>
+                <button class="post-button">Comment</button>
+                <button class="post-button">Share</button>
             </div>
         </section>
         
         <section class="post">
             <div class="post-header">
-                <img src="{% static 'home/img/man.jpg' %}" alt="Profile Picture">
                 <h2>Jane Smith</h2>
             </div>
             <div class="post-content">
-                <p>Just had a great day at the beach!</p>
                 <img src="{% static 'home/img/woman.jpg' %}" alt="Beach Photo">
             </div>
             <div class="post-footer">
@@ -48,7 +55,8 @@
                 <button>Share</button>
             </div>
         </section>
-    </main>
+    </main> 
+    -->
     
     <script src="{% static 'home/script.js' %}"></script>
 </body>
