--- a/Project/home/templates/home/profile.html
+++ b/Project/home/templates/home/profile.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -13,7 +14,7 @@
 
     <main>
         <section>
-            <h2>About</h2>
+            <h2>{{customer.name}}</h2>
             <p>This is a simple website for demonstration purposes.</p>
         </section>
     </main>
