--- a/Project/home/templates/home/main.html
+++ b/Project/home/templates/home/main.html
@@ -3,6 +3,8 @@
 <html>
 <head>
     <title>My View</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{% static 'home/style.css' %}">
 </head>
 <body>
