--- a/Project/home/templates/home/profile.html
+++ b/Project/home/templates/home/profile.html
@@ -34,10 +34,10 @@
                 <img src="{% static 'home/img/man.jpg' %}" alt="Profile Picture">
             </div>
             <div class="profile_info">
-                <h1>{{customer.name}} {{customer.surname}}</h1>
-                <p>Date of birth: {{customer.date_of_birth}}</p>
-                <p>Email: {{customer.email}}</p>
-                <p>Account created: {{customer.date_created}}</p>
+                <h1>{{user.name}} {{user.surname}}</h1>
+                <p>Date of birth: {{user.date_of_birth}}</p>
+                <p>Email: {{user.email}}</p>
+                <p>Account created: {{user.date_joined}}</p>
             </div>
         </div>
     </user_page>
