--- a/Project/home/templates/home/main.html
+++ b/Project/home/templates/home/main.html
@@ -28,6 +28,11 @@
 
         </div>
     </banner>
+    {% if request.user.is_authenticated %}
+    <a href="{% url 'logout' %}">Logout</a>
+    {% else %}
+    <a href="{% url 'login' %}">Login</a>
+    {% endif %}
     <!--
     <main>
         <section class="post">
