Added register feature + question at the bottom of login and register page if the user have or have not account already

--- a/Project/home/templates/home/login_page.html
+++ b/Project/home/templates/home/login_page.html
@@ -24,6 +24,8 @@
         <br><br>
         <input type="submit" value="Sign in">
     </form>
+    <p>Not signed up yet?</p>
+    <a href="{% url 'register' %}">Sign up</a>
     {% if messages %}
     <ul class="messages">
         {% for message in messages %}
