--- a/Project/home/templates/home/signup_page.html
+++ b/Project/home/templates/home/signup_page.html
@@ -14,6 +14,11 @@
     <div id="box">
         <h1 id="header1" >Sign up</h1>
         <form id="credentials" action="" method="POST">
+            {% csrf_token %}
+            <label class="label1" for="username">Username:</label>
+            <br>
+            <input class="input1" type="text" id="username" name="username" placeholder="username" required>
+            <br><br>
             <label class="label1" for="username">E-mail:</label>
             <br>
             <input class="input1" type="text" id="email" name="email" placeholder="e-mail" required>
@@ -30,6 +35,8 @@
         </form>
         
     </div>
+    <p>Already signed up?</p>
+    <a href="{% url 'login' %}">Sign in</a>
     
     <script src="{% static 'home/script.js' %}"></script>
 </body>
