search icon added

--- a/Project/home/templates/home/signup_page.html
+++ b/Project/home/templates/home/signup_page.html
@@ -38,6 +38,6 @@
     <p>Already signed up?</p>
     <a href="{% url 'login' %}">Sign in</a>
     
-    <script src="{% static 'home/script.js' %}"></script>
+    <script src="{% static 'home/script_signup.js' %}"></script>
 </body>
 </html>
