--- a/Project/home/templates/home/home.html
+++ b/Project/home/templates/home/home.html
@@ -8,34 +8,10 @@
     <link rel="stylesheet" type="text/css" href="{% static 'home/style_home.css' %}">
 </head>
 <body>
-    <banner>
-        <div class="logo" style="display: flex; align-items: center;">
-            <img src="{% static 'home/img/monkee.jpg' %}" alt="logo" style="width: 113px; height: 40px;">
-            <div class="search">
-                <svg fill="#000000" width="40px" height="40px" viewBox="-8 -8 50 50" xmlns="http://www.w3.org/2000/svg" style="background-color: #ad9f9f; border-radius: 50%; padding: 0px;">
-                    <g transform="translate(-609.503 -130.759)">
-                    
-                        <path d="M622.914,132.759a11.41,11.41,0,1,1-11.411,11.41,11.424,11.424,0,0,1,11.411-11.41m0-2a13.41,13.41,0,1,0,13.41,13.41,13.41,13.41,0,0,0-13.41-13.41Z"/>
+    {% block template %}
+    {% include 'home/base/banner.html' %}
+    {% endblock %}
 
-                        <path d="M640.208,162.552a1,1,0,0,1-.707-.292L631.64,154.4a1,1,0,1,1,1.414-1.414l7.861,7.86a1,1,0,0,1-.707,1.707Z"/>
-                    
-                    </g>
-                </svg>
-            </div>
-        </div>
-        <div class="main_page">
-
-        </div>
-        <div class="friends_list">
-
-        </div>
-        <div class="notification">
-
-        </div>
-        <div class="account">
-
-        </div>
-    </banner>
     {% if request.user.is_authenticated %}
     <a href="{% url 'logout' %}">Logout</a>
     {% else %}
@@ -73,6 +49,5 @@
     </main> 
     -->
     
-    <script src="{% static 'home/script.js' %}"></script>
 </body>
 </html>
