--- a/Project/home/templates/home/home.html
+++ b/Project/home/templates/home/home.html
@@ -19,28 +19,28 @@
     {% endif %}
     <!--
     <main>
-        <section class="post">
-            <div class="post-header">
+        <section id="post">
+            <div id="post-header">
                 <h2>John Doe</h2>
             </div>
-            <div class="post-content">
+            <div id="post-content">
                 <img src="{% static 'home/img/man.jpg' %}" alt="Beach Photo">
             </div>
-            <div class="post-footer">
-                <button class="post-button">Like</button>
-                <button class="post-button">Comment</button>
-                <button class="post-button">Share</button>
+            <div id="post-footer">
+                <button id="post-button">Like</button>
+                <button id="post-button">Comment</button>
+                <button id="post-button">Share</button>
             </div>
         </section>
         
-        <section class="post">
-            <div class="post-header">
+        <section id="post">
+            <div id="post-header">
                 <h2>Jane Smith</h2>
             </div>
-            <div class="post-content">
+            <div id="post-content">
                 <img src="{% static 'home/img/woman.jpg' %}" alt="Beach Photo">
             </div>
-            <div class="post-footer">
+            <div id="post-footer">
                 <button>Like</button>
                 <button>Comment</button>
                 <button>Share</button>
