--- a/Project/home/templates/home/base/banner.html
+++ b/Project/home/templates/home/base/banner.html
@@ -1,30 +1,36 @@
 {% load static %}
+<head>
+    <link rel="stylesheet" type="text/css" href="{% static 'home/style_banner.css' %}">
+</head>
 <banner>
-    <div style="display: flex; align-items: center;">
+    <div id="logo">
         <a href="{% url 'home' %}"><img src="{% static 'home/img/monkee.jpg' %}" alt="logo" style="width: 113px; height: 40px;"></a>
-        
-        <div class="search">
-            <svg fill="#000000" width="40px" height="40px" viewBox="-8 -8 50 50" xmlns="http://www.w3.org/2000/svg" style="background-color: #f0f2f5; border-radius: 50%; padding: 0px;">
-                <g transform="translate(-609.503 -130.759)">
-                
-                    <path d="M622.914,132.759a11.41,11.41,0,1,1-11.411,11.41,11.424,11.424,0,0,1,11.411-11.41m0-2a13.41,13.41,0,1,0,13.41,13.41,13.41,13.41,0,0,0-13.41-13.41Z"/>
-
-                    <path d="M640.208,162.552a1,1,0,0,1-.707-.292L631.64,154.4a1,1,0,1,1,1.414-1.414l7.861,7.86a1,1,0,0,1-.707,1.707Z"/>
-                
-                </g>
-            </svg>
-        </div>
     </div>
-    <div class="main_page">
 
+    <div id="search">
+        <svg fill="#000000" width="40px" height="40px" viewBox="-8 -8 50 50" xmlns="http://www.w3.org/2000/svg" style="background-color: #f0f2f5; border-radius: 50%; padding: 0px;">
+            <g transform="translate(-609.503 -130.759)">
+            
+                <path d="M622.914,132.759a11.41,11.41,0,1,1-11.411,11.41,11.424,11.424,0,0,1,11.411-11.41m0-2a13.41,13.41,0,1,0,13.41,13.41,13.41,13.41,0,0,0-13.41-13.41Z"/>
+                <path d="M640.208,162.552a1,1,0,0,1-.707-.292L631.64,154.4a1,1,0,1,1,1.414-1.414l7.861,7.86a1,1,0,0,1-.707,1.707Z"/>
+            
+            </g>
+        </svg>
     </div>
-    <div class="friends_list">
+
+    <div id="main_page">
 
     </div>
-    <div class="notification">
+
+    <div id="friends_list">
 
     </div>
-    <div class="account">
+
+    <div id="notification">
+
+    </div>
+
+    <div id="account">
 
     </div>
 </banner>
