--- a/Project/home/templates/home/signup_page.html
+++ b/Project/home/templates/home/signup_page.html
@@ -15,23 +15,23 @@
         <h1 id="header1" >Sign up</h1>
         <form id="credentials" action="" method="POST">
             {% csrf_token %}
-            <label id="label1" for="username">Username:</label>
+            <label class="label1" for="username">Username:</label>
             <br>
-            <input id="input1" type="text" id="username" name="username" placeholder="username" required>
+            <input class="input1" type="text" id="username" name="username" placeholder="username" required>
             <br><br>
-            <label id="label1" for="username">E-mail:</label>
+            <label class="label1" for="username">E-mail:</label>
             <br>
-            <input id="input1" type="text" id="email" name="email" placeholder="e-mail" required>
+            <input class="input1" type="text" id="email" name="email" placeholder="e-mail" required>
             <br><br>
-            <label id="label1" for="password">Password:</label>
+            <label class="label1" for="password">Password:</label>
             <br>
-            <input id="input1" type="password" id="password1" name="password1" placeholder="password" required>
+            <input class="input1" type="password" id="password1" name="password1" placeholder="password" required>
             <br><br>
-            <label id="label1" for="password">Confirm password:</label>
+            <label class="label1" for="password">Confirm password:</label>
             <br>
-            <input id="input1" type="password" id="password2" name="password2" placeholder="same password again" required>
+            <input class="input1" type="password" id="password2" name="password2" placeholder="same password again" required>
             <div id="message"><br></div>
-            <input id="submit1" type="submit" value="Sign up">
+            <input class="submit1" type="submit" value="Sign up">
         </form>
         
     </div>
