added in User class method that returns formated date of birth as it occurs in DB, also added using this method in profile-edit subdomain for input form

--- a/Project/home/templates/home/profile_edit.html
+++ b/Project/home/templates/home/profile_edit.html
@@ -34,7 +34,7 @@
         <br><br>
         <input class="input1" type="text" id="bio" name="bio" value="{{user.bio}}" placeholder="bio" required>
         <br><br>
-        <input class="input1" type="text" id="date_of_birth" name="date_of_birth" value="{{user.date_of_birth}}" placeholder="date of birth" required>
+        <input class="input1" type="text" id="date_of_birth" name="date_of_birth" value="{{user.raw_db_date_of_birth}}" placeholder="date of birth" required>
         <br><br>
         <input class="submit1" type="submit" value="Confirm">
     </form>
