--- a/Project/home/templates/home/profile_edit.html
+++ b/Project/home/templates/home/profile_edit.html
@@ -32,7 +32,7 @@
         <br><br>
         <input class="input1" type="text" id="last_name" name="last_name" value="{{user.last_name}}" placeholder="last name" required>
         <br><br>
-        <input class="input1" type="text" id="bio" name="bio" value="{{user.bio}}" placeholder="bio" required>
+        <textarea class="input1" type="text" id="bio" name="bio" placeholder="bio">{{user.bio}}</textarea>
         <br><br>
         <input class="input1" type="text" id="date_of_birth" name="date_of_birth" value="{{user.raw_db_date_of_birth}}" placeholder="date of birth" required>
         <br><br>
