--- a/Project/home/templates/home/base/banner.html
+++ b/Project/home/templates/home/base/banner.html
@@ -15,7 +15,16 @@
                 <!-- logo -->
                 <a href="{% url 'home' %}"><img src="{% static 'home/img/monkee.jpg' %}" alt="logo" style="width: 107px; height: 38px;"></a>
                 <!-- search -->
-                <button type="button" class="btn bi bi-search" style="color: black; background-color: #f2f2f2 ; border-radius: 50%;"></button>
+                <div class="dropdown">
+                    <button class="btn bi bi-search dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false" style="color: black; background-color: #f2f2f2 ; border-radius: 50%;"></button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <form id="searchform" class="d-flex">
+                            <input id="searchbar" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-outline-success" type="submit">Search</button>
+                        </form>
+                    </div>
+                </div>
+                <!--<button type="button" class="btn bi bi-search" style="color: black; background-color: #f2f2f2 ; border-radius: 50%;"></button>-->
             </div>
             
             <div id="container1" class="container text-center">
@@ -104,7 +113,7 @@
 
         </div>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
 </html>
 
